--- a/wishbucket_android/Wishbucket/app/src/main/AndroidManifest.xml
+++ b/wishbucket_android/Wishbucket/app/src/main/AndroidManifest.xml
@@ -2,14 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="dev.ibu.wishbucket">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".views.WishBucketApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".views.WishBucketApp"
         android:theme="@style/AppTheme">
         <activity
             android:name=".views.activities.MainActivity"
@@ -22,8 +22,19 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
+        <activity
+            android:name=".views.activities.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:parentActivityName=".views.activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="dev.ibu.wishbucket.views.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
