--- a/wishbucket_android/Wishbucket/app/build.gradle
+++ b/wishbucket_android/Wishbucket/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.google.code.gson:gson:2.8.0'
+    compile 'org.jsoup:jsoup:1.10.1'
 }
